--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
               href="https://github.com/LuKir5/football-database"
               ><figure class="figure">
                 <img
-                  src="assets/img/card-img-physiopraxis.png"
+                  src="assets/img/card-img-footballdatabase.png"
                   alt="Bild der Website Football Database"
                   class="figure-img img-fluid rounded"
                 />
@@ -219,9 +219,8 @@
                   <p>
                     Website mit simpler Registrierungs-/& Anmeldefunktion, sowie
                     einer mit einer Datenbank verbundenen sortierbaren Tabelle,
-                    die in Zukunft noch mit Daten von fiktiven Footballspielern
-                    gefüllt werden soll. Klicke, um zum Github Repository zu
-                    gelangen.
+                    die mit Daten von fiktiven Footballspielern gefüllt ist.
+                    Klicke, um zum Github Repository zu gelangen.
                   </p>
                 </div>
                 <figcaption class="figure-caption text-end">
