--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <!-- PAGE CONTAINER ==================================================-->
-    <div class="page-container">
+    <div class="page-container" data-aos="fade" data-aos-duration="1500">
       <!-- LINE ANIMATION ======================================================-->
       <div class="lines">
         <div class="line"></div>
@@ -65,10 +65,34 @@
         <!-- HERO SECTION ====================================================-->
         <main id="hero-container">
           <div class="hero-title-container">
-            <p class="hero-pretitle">Digitales Portfolio von</p>
-            <hr class="hero-horizontal-rule" />
-            <p class="hero-title">Lukas<br />Kirchberg</p>
-            <div class="hero-text">
+            <p
+              class="hero-pretitle"
+              data-aos="fade-left"
+              data-aos-duration="1500"
+              data-aos-delay="500"
+            >
+              Digitales Portfolio von
+            </p>
+            <hr
+              class="hero-horizontal-rule"
+              data-aos="zoom-in-right"
+              data-aos-duration="1500"
+              data-aos-delay="1000"
+            />
+            <p
+              class="hero-title"
+              data-aos="fade-left"
+              data-aos-duration="1500"
+              data-aos-delay="1500"
+            >
+              Lukas<br />Kirchberg
+            </p>
+            <div
+              class="hero-text"
+              data-aos="fade-right"
+              data-aos-duration="1500"
+              data-aos-delay="1600"
+            >
               <p>Webentwickler</p>
               <p>Göttingen, Deutschland</p>
             </div>
@@ -123,9 +147,9 @@
       <main class="about-section">
         <div
           class="about-text-container"
-          data-aos="fade-right"
-          data-aos-anchor-placement="bottom-bottom"
-          data-aos-duration="3000"
+          data-aos="fade-left"
+          data-aos-anchor-placement="top-center"
+          data-aos-duration="1500"
         >
           <h3 class="section-pretitle">Über Mich</h3>
           <h2 class="section-title">
@@ -137,18 +161,33 @@
             >
           </h2>
         </div>
-        <p class="first-about-text">
+        <p
+          class="first-about-text"
+          data-aos="fade-right"
+          data-aos-anchor-placement="top-center"
+          data-aos-duration="1500"
+        >
           . . .und seit anderthalb Jahren tauche ich mit Begeisterung in die
           Welt des Web Developments ein. Es macht mir großen Spaß, kreative und
           funktionale Lösungen zu entwickeln und mein Wissen kontinuierlich zu
           erweitern.
         </p>
-        <p class="second-about-text">
+        <p
+          class="second-about-text"
+          data-aos="fade-left"
+          data-aos-anchor-placement="top-center"
+          data-aos-duration="1500"
+        >
           Mein nächstes Ziel ist es, als Web Developer durchzustarten und meine
           Fähigkeiten in spannenden Projekten einzubringen. Meine Stärken liegen
           hierbei besonders im Frontend-Bereich.
         </p>
-        <p class="third-about-text">
+        <p
+          class="third-about-text"
+          data-aos="fade-right"
+          data-aos-anchor-placement="top-center"
+          data-aos-duration="1500"
+        >
           2024 habe ich mein Studium zum Webentwickler bei der ILS erfolgreich
           abgeschlossen. Durch diese Weiterbildung konnte ich meinen Fähigkeiten
           durch Fachkenntnisse erweitern. Weiter unten findest du eine Auswahl
@@ -162,16 +201,23 @@
       <div class="third-page-background"></div>
       <!-- PROJECTS SECTION ====================================================-->
       <div class="projects-section">
-        <div class="projects-text-container">
+        <div
+          class="projects-text-container"
+          data-aos="fade-left"
+          data-aos-anchor-placement="top-center"
+          data-aos-duration="1500"
+        >
           <h3 class="section-pretitle">Projekte</h3>
           <h2 class="section-title">Meine persönlichen Projekte</h2>
         </div>
         <div
           class="project-container mt-5"
-          href="https://github.com/LuKir5/Physiotherapiepraxis-Muster"
+          data-aos="fade-up"
+          data-aos-anchor-placement="top-center"
+          data-aos-duration="1500"
         >
           <div class="project-item-one">
-            <a href=""
+            <a href="https://github.com/LuKir5/Physiotherapiepraxis-Muster"
               ><img
                 src="assets/img/card-img-physiopraxis.png"
                 alt="Bild der Website Physiopraxis Muster"
@@ -190,7 +236,7 @@
                 vereinbaren. Klicke, um zum Github Repository zu gelangen.
               </p>
               <div class="caption-button-container">
-                <a href=""
+                <a href="https://github.com/LuKir5/Physiotherapiepraxis-Muster"
                   ><button class="btn btn-light caption-button">
                     <svg
                       stroke="var(--color-6)"
@@ -210,7 +256,7 @@
                     Code
                   </button></a
                 >
-                <a href=""
+                <a href="https://physiotherapiepraxis-muster.vercel.app/"
                   ><button class="btn btn-light caption-button">
                     <svg
                       stroke="var(--color-6)"
@@ -236,10 +282,12 @@
         </div>
         <div
           class="project-container align-self-end"
-          href="https://github.com/LuKir5/football-database"
+          data-aos="fade-up"
+          data-aos-anchor-placement="top-center"
+          data-aos-duration="1500"
         >
           <div class="project-item-one">
-            <a href="">
+            <a href="https://github.com/LuKir5/360-Scouting">
               <img
                 src="assets/img/card-img-footballdatabase.png"
                 alt="Bild der Website Football Database"
@@ -248,7 +296,7 @@
           </div>
           <div class="project-item-two">
             <figcaption class="caption-text">
-              <h3 class="caption-title">2. Football Database</h3>
+              <h3 class="caption-title">2. 360° Scouting</h3>
               <p class="caption-text">
                 Website mit simpler Registrierungs-/& Anmeldefunktion, sowie
                 einer mit einer Datenbank verbundenen sortierbaren Tabelle, die
@@ -256,7 +304,7 @@
                 zum Github Repository zu gelangen.
               </p>
               <div class="caption-button-container">
-                <a href=""
+                <a href="https://github.com/LuKir5/360-Scouting"
                   ><button class="btn btn-light caption-button">
                     <svg
                       stroke="var(--color-6)"
@@ -276,7 +324,7 @@
                     Code
                   </button></a
                 >
-                <a href=""
+                <a href="https://360-scouting.vercel.app/"
                   ><button class="btn btn-light caption-button">
                     <svg
                       stroke="var(--color-6)"
@@ -300,9 +348,14 @@
             </figcaption>
           </div>
         </div>
-        <div class="project-container" href="https://luma-blog.de">
+        <div
+          class="project-container"
+          data-aos="fade-up"
+          data-aos-anchor-placement="top-center"
+          data-aos-duration="1500"
+        >
           <div class="project-item-one">
-            <a href="">
+            <a href="https://luma-blog.de">
               <img
                 src="assets/img/card-img-luma.png"
                 alt="Bild der Website
@@ -315,12 +368,12 @@
               <h3 class="caption-title">3. Persönlicher Reiseblog</h3>
               <p class="caption-text">
                 Ein Reiseblog, den ich mit dem CMS Wordpress erstellt habe. Hier
-                teile ich Eindrücke mein er Reisen in Form von Bildern. Klicke,
+                teile ich Eindrücke meiner Reisen in Form von Bildern. Klicke,
                 um zum zur Seite zu gelangen.
               </p>
               <div class="caption-button-container">
                 <a href=""
-                  ><button class="btn btn-light caption-button">
+                  ><button class="btn btn-light caption-button disabled">
                     <svg
                       stroke="var(--color-6)"
                       fill="var(--color-6)"
@@ -339,7 +392,7 @@
                     Code
                   </button></a
                 >
-                <a href=""
+                <a href="https://luma-blog.de"
                   ><button class="btn btn-light caption-button">
                     <svg
                       stroke="var(--color-6)"
@@ -365,10 +418,12 @@
         </div>
         <div
           class="project-container align-self-end"
-          href="https://github.com/LuKir5/Portfolio"
+          data-aos="fade-up"
+          data-aos-anchor-placement="top-center"
+          data-aos-duration="1500"
         >
           <div class="project-item-one">
-            <a href="">
+            <a href="https://github.com/LuKir5/Portfolio">
               <img
                 src="assets/img/card-img-portfolio.png"
                 alt="Bild von dieser Portfolio Website"
@@ -384,7 +439,7 @@
                 um zum Github Repository zu gelangen.
               </p>
               <div class="caption-button-container">
-                <a href=""
+                <a href="https://github.com/LuKir5/Portfolio"
                   ><button class="btn btn-light caption-button">
                     <svg
                       stroke="var(--color-6)"
@@ -404,7 +459,7 @@
                     Code
                   </button></a
                 >
-                <a href=""
+                <a href="https://lukas-kir.com/"
                   ><button class="btn btn-light caption-button">
                     <svg
                       stroke="var(--color-6)"
@@ -435,11 +490,21 @@
     <div id="fourth-page">
       <!-- CONTACT SECTION ====================================================-->
       <div class="contact-section">
-        <div class="contact-text-container">
+        <div
+          class="contact-text-container"
+          data-aos="fade-left"
+          data-aos-anchor-placement="top-center"
+          data-aos-duration="1500"
+        >
           <h3 class="section-pretitle">Kontakt</h3>
           <h2 class="section-title">Hast du Fragen an mich?</h2>
         </div>
-        <p class="first-contact-text">
+        <p
+          class="first-contact-text"
+          data-aos="fade-up"
+          data-aos-anchor-placement="top-center"
+          data-aos-duration="1500"
+        >
           Dann schreibe mir am besten eine E-Mail an:
           <br />
           <img
@@ -449,7 +514,12 @@
           />
           <span style="font-weight: 500">Lukas.Kirchberg@gmx.net</span>
         </p>
-        <p class="second-contact-text">
+        <p
+          class="second-contact-text"
+          data-aos="fade-up"
+          data-aos-anchor-placement="top-center"
+          data-aos-duration="1500"
+        >
           Alternativ bist du herzlich eingeladen auf meinen
           <br />
           Socialmediakanälen vorbeizuschauen!
