Updating datenschutz.html

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -24,13 +24,12 @@
       <!-- DATENSCHUTZ PAGE ======================================================-->
       <div id="datenschutz-page">
         <!-- HEADER & NAVIGATION ======================================================-->
-        <header id="header-container">
+        <header
+          id="header-container"
+          style="background-color: var(--color-2); min-height: 80px"
+        >
           <nav class="navbar navbar-expand-lg">
             <div id="container-fluid" class="container-fluid">
-              <a id="navbar-brand" class="navbar-brand" href="index.html">
-                <span class="navbar-brand-firstword">L</span
-                ><span class="navbar-brand-secondword">K</span>
-              </a>
               <button
                 class="navbar-toggler"
                 type="button"
@@ -47,9 +46,7 @@
                 id="navbarNavAltMarkup"
               >
                 <div id="navbar-nav" class="navbar-nav">
-                  <a class="nav-link" href="index.html"
-                    >Zurück zur Startseite</a
-                  >
+                  <a class="nav-link" href="index.html">Zurück zu Startseite</a>
                 </div>
               </div>
             </div>
@@ -68,7 +65,6 @@
             Applikation verarbeiten.
           </p>
           <p>Die verwendeten Begriffe sind nicht geschlechtsspezifisch.</p>
-
           <p>Stand: 30. November 2024</p>
           <h3>Inhaltsübersicht</h3>
           <ul class="index">
@@ -121,7 +117,6 @@
             E-Mail-Adresse:
             <a href="mailto:Lukas.Kirchberg@gmx.net">Lukas.Kirchberg@gmx.net</a>
           </p>
-
           <h3 id="mOverview">Übersicht der Verarbeitungen</h3>
           <p>
             Die nachfolgende Übersicht fasst die Arten der verarbeiteten Daten
@@ -212,7 +207,6 @@
             gesetzliche Bedeutung der Begriffe wird jedoch im Rahmen der Geltung
             des Schweizer DSG weiterhin nach dem Schweizer DSG bestimmt.
           </p>
-
           <h3 id="m27">Sicherheitsmaßnahmen</h3>
           <p>
             Wir treffen nach Maßgabe der gesetzlichen Vorgaben unter
@@ -238,7 +232,6 @@
             Prinzip des Datenschutzes, durch Technikgestaltung und durch
             datenschutzfreundliche Voreinstellungen.
           </p>
-
           <h3 id="m12">
             Allgemeine Informationen zur Datenspeicherung und Löschung
           </h3>
@@ -395,7 +388,6 @@
               die Vorgaben der DSGVO verstößt.
             </li>
           </ul>
-
           <h3 id="m225">Bereitstellung des Onlineangebots und Webhosting</h3>
           <p>
             Wir verarbeiten die Daten der Nutzer, um ihnen unsere Online-Dienste
@@ -767,7 +759,7 @@
         <!-- FOOTER ====================================================-->
         <footer id="footer-container">
           <div class="footer-credits">
-            ©2024 | Lukas Kirchberg |
+            ©2025 | Lukas Kirchberg |
             <a href="index.html" class="footer-link">Startseite</a>
           </div>
           <div class="footer-socials">
