Updating project-section

--- a/index.html
+++ b/index.html
@@ -217,22 +217,22 @@
           data-aos-duration="1500"
         >
           <div class="project-item-one">
-            <a href="https://github.com/LuKir5/Physiotherapiepraxis-Muster"
+            <a
+              class="project-img"
+              href="https://github.com/LuKir5/Physiotherapiepraxis-Muster"
               ><img
-                src="assets/img/card-img-physiopraxis.png"
+                src="assets/img/project-img-physiopraxis.png"
                 alt="Bild der Website Physiopraxis Muster"
                 class="img-fluid rounded"
             /></a>
           </div>
           <div class="project-item-two">
             <figcaption>
-              <h3 class="caption-title">
-                1. Website einer Physiotherapiepraxis
-              </h3>
+              <h3 class="caption-title">Physiotherapiepraxis Muster</h3>
               <p class="caption-text">
                 Eine Website einer fiktiven Praxis für Physiotherapie. Neben
-                einem klaren,funktionalen, aber auch modernen Design, bietet sie
-                unter anderem die Möglichkeit per Formular online Termine zu
+                einem klaren, funktionalen, aber auch modernen Design, bietet
+                sie unter anderem die Möglichkeit per Formular online Termine zu
                 vereinbaren. Klicke, um zum Github Repository zu gelangen.
               </p>
               <div class="caption-button-container">
@@ -281,22 +281,25 @@
           </div>
         </div>
         <div
-          class="project-container align-self-end"
+          class="project-container"
           data-aos="fade-up"
           data-aos-anchor-placement="top-center"
           data-aos-duration="1500"
         >
           <div class="project-item-one">
-            <a href="https://github.com/LuKir5/360-Scouting">
+            <a
+              class="project-img"
+              href="https://github.com/LuKir5/360-Scouting"
+            >
               <img
-                src="assets/img/card-img-footballdatabase.png"
-                alt="Bild der Website Football Database"
+                src="assets/img/project-img-360scouting.png"
+                alt="Bild der Website 360° Scouting"
                 class="img-fluid rounded"
             /></a>
           </div>
           <div class="project-item-two">
             <figcaption class="caption-text">
-              <h3 class="caption-title">2. 360° Scouting</h3>
+              <h3 class="caption-title">360° Scouting</h3>
               <p class="caption-text">
                 Website mit simpler Registrierungs-/& Anmeldefunktion, sowie
                 einer mit einer Datenbank verbundenen sortierbaren Tabelle, die
@@ -365,7 +368,7 @@
           </div>
           <div class="project-item-two">
             <figcaption class="caption-text">
-              <h3 class="caption-title">3. Persönlicher Reiseblog</h3>
+              <h3 class="caption-title">Persönlicher Reiseblog</h3>
               <p class="caption-text">
                 Ein Reiseblog, den ich mit dem CMS Wordpress erstellt habe. Hier
                 teile ich Eindrücke meiner Reisen in Form von Bildern. Klicke,
@@ -417,7 +420,7 @@
           </div>
         </div>
         <div
-          class="project-container align-self-end"
+          class="project-container"
           data-aos="fade-up"
           data-aos-anchor-placement="top-center"
           data-aos-duration="1500"
@@ -425,14 +428,14 @@
           <div class="project-item-one">
             <a href="https://github.com/LuKir5/Portfolio">
               <img
-                src="assets/img/card-img-portfolio.png"
+                src="assets/img/project-img-portfolio2.png"
                 alt="Bild von dieser Portfolio Website"
                 class="img-fluid rounded"
             /></a>
           </div>
           <div class="project-item-two">
             <figcaption class="caption-text">
-              <h3 class="caption-title">4. Digitales Portfolio</h3>
+              <h3 class="caption-title">Digitales Portfolio</h3>
               <p class="caption-text">
                 Für mein eigenes digitales Portfolio sind die am
                 weitverbreitetsten Webtechnologien zum Einsatz gekommen. Klicke,
