--- a/index.html
+++ b/index.html
@@ -25,9 +25,24 @@
     <div class="page-container" data-aos="fade" data-aos-duration="1500">
       <!-- LINE ANIMATION ======================================================-->
       <div class="lines">
-        <div class="line"></div>
-        <div class="line"></div>
-        <div class="line"></div>
+        <div
+          class="line"
+          data-aos="slide-down"
+          data-aos-duration="1500"
+          data-aos-delay="500"
+        ></div>
+        <div
+          class="line"
+          data-aos="slide-up"
+          data-aos-duration="1500"
+          data-aos-delay="500"
+        ></div>
+        <div
+          class="line"
+          data-aos="slide-up"
+          data-aos-duration="1500"
+          data-aos-delay="500"
+        ></div>
       </div>
 
       <!-- FIRST PAGE ======================================================-->
@@ -148,7 +163,7 @@
         <div
           class="about-text-container"
           data-aos="fade-left"
-          data-aos-anchor-placement="top-center"
+          data-aos-anchor-placement="center-bottom"
           data-aos-duration="1500"
         >
           <h3 class="section-pretitle">Über Mich</h3>
@@ -164,7 +179,7 @@
         <p
           class="first-about-text"
           data-aos="fade-right"
-          data-aos-anchor-placement="top-center"
+          data-aos-anchor-placement="center-bottom"
           data-aos-duration="1500"
         >
           . . .und seit anderthalb Jahren tauche ich mit Begeisterung in die
@@ -175,7 +190,7 @@
         <p
           class="second-about-text"
           data-aos="fade-left"
-          data-aos-anchor-placement="top-center"
+          data-aos-anchor-placement="center-bottom"
           data-aos-duration="1500"
         >
           Mein nächstes Ziel ist es, als Web Developer durchzustarten und meine
@@ -185,11 +200,11 @@
         <p
           class="third-about-text"
           data-aos="fade-right"
-          data-aos-anchor-placement="top-center"
+          data-aos-anchor-placement="center-bottom"
           data-aos-duration="1500"
         >
           2024 habe ich mein Studium zum Webentwickler bei der ILS erfolgreich
-          abgeschlossen. Durch diese Weiterbildung konnte ich meinen Fähigkeiten
+          abgeschlossen. Durch diese Weiterbildung konnte ich meine Fähigkeiten
           durch Fachkenntnisse erweitern. Weiter unten findest du eine Auswahl
           meiner bisherigen Projekte. Ich freue mich, wenn du reinschaust!
         </p>
@@ -204,7 +219,7 @@
         <div
           class="projects-text-container"
           data-aos="fade-left"
-          data-aos-anchor-placement="top-center"
+          data-aos-anchor-placement="center-bottom"
           data-aos-duration="1500"
         >
           <h3 class="section-pretitle">Projekte</h3>
@@ -213,7 +228,7 @@
         <div
           class="project-container mt-5"
           data-aos="fade-up"
-          data-aos-anchor-placement="top-center"
+          data-aos-anchor-placement="center-bottom"
           data-aos-duration="1500"
         >
           <div class="project-item-one">
@@ -233,7 +248,7 @@
                 Eine Website einer fiktiven Praxis für Physiotherapie. Neben
                 einem klaren, funktionalen, aber auch modernen Design, bietet
                 sie unter anderem die Möglichkeit per Formular online Termine zu
-                vereinbaren. Klicke, um zum Github Repository zu gelangen.
+                vereinbaren.
               </p>
               <div class="caption-button-container">
                 <a href="https://github.com/LuKir5/Physiotherapiepraxis-Muster"
@@ -283,7 +298,7 @@
         <div
           class="project-container"
           data-aos="fade-up"
-          data-aos-anchor-placement="top-center"
+          data-aos-anchor-placement="center-bottom"
           data-aos-duration="1500"
         >
           <div class="project-item-one">
@@ -301,10 +316,10 @@
             <figcaption class="caption-text">
               <h3 class="caption-title">360° Scouting</h3>
               <p class="caption-text">
-                Website mit simpler Registrierungs-/& Anmeldefunktion, sowie
-                einer mit einer Datenbank verbundenen sortierbaren Tabelle, die
-                mit Daten von fiktiven Footballspielern gefüllt ist. Klicke, um
-                zum Github Repository zu gelangen.
+                Diese englischsprachige Website wurde mit dem Javascript
+                Framework Vue.js erstellt. Für einige Komponenten habe ich
+                Vuetify genutzt. Sie stellt die Homepage einer Scoutingfirma für
+                American Football dar.
               </p>
               <div class="caption-button-container">
                 <a href="https://github.com/LuKir5/360-Scouting"
@@ -354,7 +369,7 @@
         <div
           class="project-container"
           data-aos="fade-up"
-          data-aos-anchor-placement="top-center"
+          data-aos-anchor-placement="center-bottom"
           data-aos-duration="1500"
         >
           <div class="project-item-one">
@@ -370,9 +385,9 @@
             <figcaption class="caption-text">
               <h3 class="caption-title">Persönlicher Reiseblog</h3>
               <p class="caption-text">
-                Ein Reiseblog, den ich mit dem CMS Wordpress erstellt habe. Hier
-                teile ich Eindrücke meiner Reisen in Form von Bildern. Klicke,
-                um zum zur Seite zu gelangen.
+                Ein simpler Reiseblog, den ich mit dem CMS Wordpress erstellt
+                habe. Hier teile ich Eindrücke meiner Reisen in Form von
+                Bildern.
               </p>
               <div class="caption-button-container">
                 <a href=""
@@ -422,7 +437,7 @@
         <div
           class="project-container"
           data-aos="fade-up"
-          data-aos-anchor-placement="top-center"
+          data-aos-anchor-placement="center-bottom"
           data-aos-duration="1500"
         >
           <div class="project-item-one">
@@ -438,8 +453,8 @@
               <h3 class="caption-title">Digitales Portfolio</h3>
               <p class="caption-text">
                 Für mein eigenes digitales Portfolio sind die am
-                weitverbreitetsten Webtechnologien zum Einsatz gekommen. Klicke,
-                um zum Github Repository zu gelangen.
+                weitverbreitetsten Webtechnologien zum Einsatz gekommen. Als
+                Frontend-Framework habe ich zusätzlich Bootstrap genutzt.
               </p>
               <div class="caption-button-container">
                 <a href="https://github.com/LuKir5/Portfolio"
@@ -496,7 +511,7 @@
         <div
           class="contact-text-container"
           data-aos="fade-left"
-          data-aos-anchor-placement="top-center"
+          data-aos-anchor-placement="bottom-bottom"
           data-aos-duration="1500"
         >
           <h3 class="section-pretitle">Kontakt</h3>
@@ -505,7 +520,7 @@
         <p
           class="first-contact-text"
           data-aos="fade-up"
-          data-aos-anchor-placement="top-center"
+          data-aos-anchor-placement="bottom-bottom"
           data-aos-duration="1500"
         >
           Dann schreibe mir am besten eine E-Mail an:
@@ -520,7 +535,7 @@
         <p
           class="second-contact-text"
           data-aos="fade-up"
-          data-aos-anchor-placement="top-center"
+          data-aos-anchor-placement="bottom-bottom"
           data-aos-duration="1500"
         >
           Alternativ bist du herzlich eingeladen auf meinen
